--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="./script.js" defer></script>
     <title>IMC</title>
 </head>
 
@@ -18,7 +19,7 @@
 
             <h2>Cadastro de infomacoes</h2>
 
-            <form method="post" onsubmit="CalcularIMC(event)">
+            <form method="post" onsubmit="CalcularValores(event)">
 
                 <div class="campo-form">
                     
@@ -30,14 +31,14 @@
                 <div class="campo-form">
 
                     <label for="altura">Altura:</label>
-                    <input type="number" name="campo-altura" id="altura"placeholder="Insira sua altura:">
+                    <input type="number" name="campo-altura" id="altura" step="0.01" min="0.1" max="10" placeholder="Insira sua altura:">
 
                 </div>
 
                 <div class="campo-form">
 
                     <label for="peso">Peso</label>
-                    <input type="number" name="campo-peso" id="weight" placeholder="Insira seu peso em kg.Ex:85:">
+                    <input type="number" name="campo-peso" id="weight" step="0.01" min="0.1" max="300" placeholder="Insira seu peso em kg.Ex:85:">
                 
                 </div>
 
